k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: github-analytics
  labels:
    app: api-gateway
    app.kubernetes.io/part-of: github-analytics
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
